view more - done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 <div class="wrapper">
@@ -24,7 +25,8 @@
 
         <div class="img-wrapper" id="imgs">
             <p class="title">works of <br/>Maria Álvarez</p>
-            <div class="flex-block">
+
+            <div class="img-item flex-block">
                 <img class="img-big-size" src="img/1.jpg" alt="1">
 
                 <div class="img-small-wrapper">
@@ -37,41 +39,64 @@
                 </div>
             </div>
 
-            <div class="flex-block">
+            <div class=" img-item flex-block">
                 <img class="img-big-size" src="img/6.jpg" alt="3">
 
                 <div class="img-small-wrapper">
                     <p class="text-descr">design</p>
                     <p class="text-header">magic forest</p>
                     <div class="flex-block ">
-                        <img class="img-small-size" src="img/7.jpg" alt="4">
-                        <img class="img-small-size" src="img/5.jpg" alt="4">
+                        <img class="img-small-size" src="img/7.jpg" alt="7">
+                        <img class="img-small-size" src="img/5.jpg" alt="5">
                     </div>
                 </div>
             </div>
 
-            <div class="flex-block">
+            <div class="img-item flex-block">
                 <img class="img-big-size" src="img/8.jpg" alt="3">
 
                 <div class="img-small-wrapper">
                     <p class="text-descr">design</p>
                     <p class="text-header">blue flower</p>
                     <div class="flex-block ">
-                        <img class="img-small-size" src="img/4.jpg" alt="4">
+                        <img class="img-small-size" src="img/16.gif" alt="16">
                         <img class="img-small-size" src="img/9.jpg" alt="4">
                     </div>
                 </div>
             </div>
 
 
-            <div class="view-more-block">
 
-                <div class="view-more-button"></div>
-                <button >view more</button>
-                <p>Maria is editorial/ commercial photographer based in New York city</p>
 
+            <div class="img-item flex-block">
+                <img class="img-big-size" src="img/18.jpg" alt="10">
+
+                <div class="img-small-wrapper">
+                    <p class="text-descr">design</p>
+                    <p class="text-header">movement</p>
+                    <div class="flex-block ">
+                        <img class="img-small-size" src="img/12.jpg" alt="12">
+                        <img class="img-small-size" src="img/13.jpg" alt="13">
+                    </div>
+                </div>
             </div>
+            <div class="img-item flex-block">
+                <img class="img-big-size" src="img/3.gif" alt="11">
 
+                <div class="img-small-wrapper">
+                    <p class="text-descr">design</p>
+                    <p class="text-header">be yourself</p>
+                    <div class="flex-block ">
+                        <img class="img-small-size" src="img/15.jpg" alt="14">
+                        <img class="img-small-size" src="img/14.jpg" alt="15">
+                    </div>
+                </div>
+            </div>
+            <div class="view-more-block">
+                <div class="view-more-button"></div>
+                <button id="viewMoreBtn">view more</button>
+                <p>Maria is editorial/ commercial photographer based in New York city</p>
+            </div>
         </div>
 
 
@@ -79,6 +104,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-<script src="scroll.js"></script>
+<script src="js/scroll.js"></script>
+<script src="js/show_more.js"></script>
 </body>
 </html>
