--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
             <div class="view-more-block">
                 <div class="view-more-button"></div>
                 <button id="viewMoreBtn">view more</button>
-                <p>Maria is editorial/ commercial photographer based in New York city</p>
+               <div class="view-more-block-text">
+                   <p>Maria is editorial/ commercial photographer based in New York city</p>
+               </div>
             </div>
         </div>
 
@@ -104,7 +106,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-<script src="js/scroll.js"></script>
+<script src="index.js"></script>
 <script src="js/show_more.js"></script>
 </body>
 </html>
