small changes / code style

--- a/index.html
+++ b/index.html
@@ -1,112 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Art Gallery</title>
-    <link rel="icon" href="img/logo.jpg">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-
-</head>
-<body>
-<div class="wrapper">
-    <div class="contacts">
+    <link rel="icon" href="img/logo.jpg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="contacts">
         <p>New York, Manhattan Avenue 16</p>
         <a href="tel:(+1)212-226-4151"> (+1)212-226-4151</a>
-    </div>
-
-    <div class="container">
-
+      </div>
+      <div class="container">
         <div class="aside">
-            <p>Wonderment</p>
-            <span>2020 &copy; by Yana Ignatova</span>
+          <p>Wonderment</p>
+          <span>2020 &copy; by Yana Ignatova</span>
         </div>
-
         <div class="img-wrapper" id="imgs">
-            <p class="title">works of <br/>Maria Álvarez</p>
-
-            <div class="img-item flex-block">
-                <img class="img-big-size" src="img/1.jpg" alt="1">
-
-                <div class="img-small-wrapper">
-                    <p class="text-descr">design</p>
-                    <p class="text-header">in december</p>
-                    <div class="flex-block ">
-                        <img class="img-small-size" src="img/2.jpg" alt="2">
-                        <img class="img-small-size" src="img/3.jpg" alt="3">
-                    </div>
-                </div>
+          <p class="title">works of <br />Maria Álvarez</p>
+          <div class="img-item flex-block">
+            <img class="img-big-size" src="img/1.jpg" alt="1" />
+            <div class="img-small-wrapper">
+              <p class="text-descr">design</p>
+              <p class="text-header">in december</p>
+              <div class="flex-block">
+                <img class="img-small-size" src="img/2.jpg" alt="2" />
+                <img class="img-small-size" src="img/3.jpg" alt="3" />
+              </div>
             </div>
-
-            <div class=" img-item flex-block">
-                <img class="img-big-size" src="img/6.jpg" alt="3">
-
-                <div class="img-small-wrapper">
-                    <p class="text-descr">design</p>
-                    <p class="text-header">magic forest</p>
-                    <div class="flex-block ">
-                        <img class="img-small-size" src="img/7.jpg" alt="7">
-                        <img class="img-small-size" src="img/5.jpg" alt="5">
-                    </div>
-                </div>
+          </div>
+          <div class="img-item flex-block">
+            <img class="img-big-size" src="img/6.jpg" alt="3" />
+            <div class="img-small-wrapper">
+              <p class="text-descr">design</p>
+              <p class="text-header">magic forest</p>
+              <div class="flex-block">
+                <img class="img-small-size" src="img/7.jpg" alt="7" />
+                <img class="img-small-size" src="img/5.jpg" alt="5" />
+              </div>
             </div>
-
-            <div class="img-item flex-block">
-                <img class="img-big-size" src="img/8.jpg" alt="3">
-
-                <div class="img-small-wrapper">
-                    <p class="text-descr">design</p>
-                    <p class="text-header">blue flower</p>
-                    <div class="flex-block ">
-                        <img class="img-small-size" src="img/16.gif" alt="16">
-                        <img class="img-small-size" src="img/9.jpg" alt="4">
-                    </div>
-                </div>
+          </div>
+          <div class="img-item flex-block">
+            <img class="img-big-size" src="img/8.jpg" alt="3" />
+            <div class="img-small-wrapper">
+              <p class="text-descr">design</p>
+              <p class="text-header">blue flower</p>
+              <div class="flex-block">
+                <img class="img-small-size" src="img/16.gif" alt="16" />
+                <img class="img-small-size" src="img/9.jpg" alt="4" />
+              </div>
             </div>
-
-
-
-
-            <div class="img-item flex-block">
-                <img class="img-big-size" src="img/18.jpg" alt="10">
-
-                <div class="img-small-wrapper">
-                    <p class="text-descr">design</p>
-                    <p class="text-header">movement</p>
-                    <div class="flex-block ">
-                        <img class="img-small-size" src="img/12.jpg" alt="12">
-                        <img class="img-small-size" src="img/13.jpg" alt="13">
-                    </div>
-                </div>
+          </div>
+          <div class="img-item flex-block">
+            <img class="img-big-size" src="img/18.jpg" alt="10" />
+            <div class="img-small-wrapper">
+              <p class="text-descr">design</p>
+              <p class="text-header">movement</p>
+              <div class="flex-block">
+                <img class="img-small-size" src="img/12.jpg" alt="12" />
+                <img class="img-small-size" src="img/13.jpg" alt="13" />
+              </div>
             </div>
-            <div class="img-item flex-block">
-                <img class="img-big-size" src="img/3.gif" alt="11">
+          </div>
+          <div class="img-item flex-block">
+            <img class="img-big-size" src="img/3.gif" alt="11" />
 
-                <div class="img-small-wrapper">
-                    <p class="text-descr">design</p>
-                    <p class="text-header">be yourself</p>
-                    <div class="flex-block ">
-                        <img class="img-small-size" src="img/15.jpg" alt="14">
-                        <img class="img-small-size" src="img/14.jpg" alt="15">
-                    </div>
-                </div>
+            <div class="img-small-wrapper">
+              <p class="text-descr">design</p>
+              <p class="text-header">be yourself</p>
+              <div class="flex-block">
+                <img class="img-small-size" src="img/15.jpg" alt="14" />
+                <img class="img-small-size" src="img/14.jpg" alt="15" />
+              </div>
             </div>
-            <div class="view-more-block">
-                <div class="view-more-button"></div>
-                <button id="viewMoreBtn">view more</button>
-               <div class="view-more-block-text">
-                   <p>Maria is editorial/ commercial photographer based in New York city</p>
-               </div>
+          </div>
+          <div class="view-more-block">
+            <div class="view-more-button"></div>
+            <button id="viewMoreBtn">view more</button>
+            <div class="view-more-block-text">
+              <p>
+                Maria is editorial/ commercial photographer based in New York
+                city
+              </p>
             </div>
+          </div>
         </div>
-
-
+      </div>
     </div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-<script src="index.js"></script>
-<script src="js/show_more.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
